[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/MainMenu/PlayMenu/PlayMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Game/Player/Player1/Front_idle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Icons/gamepad1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/MainMenu/PlayMenu/PlayerInput.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Game/Player/Icons/Player4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Game/Player/Icons/Player2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Game/Player/Icons/Player3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu/Icons/gamepad2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/Icons/gamepad3.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu/Icons/minus.png" type="Texture" id=10]
[ext_resource path="res://Scenes/MainMenu/PlayMenu/PlayerAddRemove.gd" type="Script" id=11]
[ext_resource path="res://Assets/Menu/Icons/plus.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menu/Icons/gamepad4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menu/Icons/buttonStart.png" type="Texture" id=14]
[ext_resource path="res://Ressources/Theme.tres" type="Theme" id=15]

[node name="PlayMenu" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -382.0
margin_top = -276.0
margin_right = 382.0
margin_bottom = 276.0
theme = ExtResource( 15 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 770.0
margin_bottom = 662.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSelect" type="GridContainer" parent="VBox"]
margin_right = 750.0
margin_bottom = 534.0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 2

[node name="Player1" type="VBoxContainer" parent="VBox/PlayerSelect"]
margin_right = 350.0
margin_bottom = 242.0

[node name="Container" type="HBoxContainer" parent="VBox/PlayerSelect/Player1"]
margin_right = 350.0
margin_bottom = 192.0
rect_min_size = Vector2( 350, 192 )

[node name="Icons" type="VBoxContainer" parent="VBox/PlayerSelect/Player1/Container"]
margin_right = 142.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player1/Container/Icons"]
margin_right = 142.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/PlayerSelect/Player1/Container/Icons"]
margin_top = 144.0
margin_right = 142.0
margin_bottom = 192.0

[node name="ControllerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player1/Container/Icons/HBoxContainer"]
margin_right = 142.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" parent="VBox/PlayerSelect/Player1/Container" instance=ExtResource( 4 )]
margin_left = 150.0
margin_right = 350.0
margin_bottom = 192.0
menu = NodePath("../../../../..")

[node name="PlayerNameInput" type="LineEdit" parent="VBox/PlayerSelect/Player1"]
margin_top = 200.0
margin_right = 350.0
margin_bottom = 242.0
placeholder_text = "name"

[node name="Player2" type="VBoxContainer" parent="VBox/PlayerSelect"]
margin_left = 400.0
margin_right = 750.0
margin_bottom = 242.0

[node name="Container" type="HBoxContainer" parent="VBox/PlayerSelect/Player2"]
margin_right = 350.0
margin_bottom = 192.0
rect_min_size = Vector2( 350, 192 )

[node name="Icons" type="VBoxContainer" parent="VBox/PlayerSelect/Player2/Container"]
margin_right = 142.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player2/Container/Icons"]
margin_right = 142.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/PlayerSelect/Player2/Container/Icons"]
margin_top = 144.0
margin_right = 142.0
margin_bottom = 192.0

[node name="ControllerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player2/Container/Icons/HBoxContainer"]
margin_right = 142.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" parent="VBox/PlayerSelect/Player2/Container" instance=ExtResource( 4 )]
margin_left = 150.0
margin_right = 350.0
margin_bottom = 192.0
player_id = "2"
menu = NodePath("../../../../..")

[node name="PlayerNameInput" type="LineEdit" parent="VBox/PlayerSelect/Player2"]
margin_top = 200.0
margin_right = 350.0
margin_bottom = 242.0
placeholder_text = "name"

[node name="Player3" type="VBoxContainer" parent="VBox/PlayerSelect"]
margin_top = 292.0
margin_right = 350.0
margin_bottom = 534.0
rect_min_size = Vector2( 0, 242 )
rect_clip_content = true
script = ExtResource( 11 )
pid = "3"
menu = NodePath("../../..")

[node name="Container" type="HBoxContainer" parent="VBox/PlayerSelect/Player3"]
margin_right = 350.0
margin_bottom = 192.0
rect_min_size = Vector2( 350, 192 )

[node name="Icons" type="VBoxContainer" parent="VBox/PlayerSelect/Player3/Container"]
margin_right = 142.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player3/Container/Icons"]
margin_right = 142.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/PlayerSelect/Player3/Container/Icons"]
margin_top = 144.0
margin_right = 142.0
margin_bottom = 192.0

[node name="ControllerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player3/Container/Icons/HBoxContainer"]
margin_right = 67.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnRemove" type="TextureButton" parent="VBox/PlayerSelect/Player3/Container/Icons/HBoxContainer"]
margin_left = 75.0
margin_right = 142.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" parent="VBox/PlayerSelect/Player3/Container" instance=ExtResource( 4 )]
margin_left = 150.0
margin_right = 350.0
margin_bottom = 192.0
player_id = "3"
menu = NodePath("../../../../..")

[node name="BtnAdd" type="TextureButton" parent="VBox/PlayerSelect/Player3"]
visible = false
margin_top = 200.0
margin_right = 350.0
margin_bottom = 392.0
rect_min_size = Vector2( 64, 192 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="PlayerNameInput" type="LineEdit" parent="VBox/PlayerSelect/Player3"]
margin_top = 200.0
margin_right = 350.0
margin_bottom = 242.0
placeholder_text = "name"

[node name="Player4" type="VBoxContainer" parent="VBox/PlayerSelect"]
margin_left = 400.0
margin_top = 292.0
margin_right = 750.0
margin_bottom = 534.0
rect_min_size = Vector2( 0, 242 )
rect_clip_content = true
script = ExtResource( 11 )
pid = "4"
menu = NodePath("../../..")

[node name="Container" type="HBoxContainer" parent="VBox/PlayerSelect/Player4"]
margin_right = 350.0
margin_bottom = 192.0
rect_min_size = Vector2( 350, 192 )

[node name="Icons" type="VBoxContainer" parent="VBox/PlayerSelect/Player4/Container"]
margin_right = 142.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player4/Container/Icons"]
margin_right = 142.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/PlayerSelect/Player4/Container/Icons"]
margin_top = 144.0
margin_right = 142.0
margin_bottom = 192.0

[node name="ControllerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player4/Container/Icons/HBoxContainer"]
margin_right = 67.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnRemove" type="TextureButton" parent="VBox/PlayerSelect/Player4/Container/Icons/HBoxContainer"]
margin_left = 75.0
margin_right = 142.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" parent="VBox/PlayerSelect/Player4/Container" instance=ExtResource( 4 )]
margin_left = 150.0
margin_right = 350.0
margin_bottom = 192.0
player_id = "4"
menu = NodePath("../../../../..")

[node name="BtnAdd" type="TextureButton" parent="VBox/PlayerSelect/Player4"]
visible = false
margin_top = 200.0
margin_right = 350.0
margin_bottom = 392.0
rect_min_size = Vector2( 64, 192 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="PlayerNameInput" type="LineEdit" parent="VBox/PlayerSelect/Player4"]
margin_top = 200.0
margin_right = 350.0
margin_bottom = 242.0
placeholder_text = "name"

[node name="Control" type="CenterContainer" parent="VBox"]
margin_top = 542.0
margin_right = 750.0
margin_bottom = 642.0

[node name="BtnStart" type="TextureButton" parent="VBox/Control"]
margin_left = 325.0
margin_right = 425.0
margin_bottom = 100.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBox/PlayerSelect/Player3/Container/Icons/HBoxContainer/BtnRemove" to="VBox/PlayerSelect/Player3" method="_on_BtnRemove_pressed"]
[connection signal="pressed" from="VBox/PlayerSelect/Player3/BtnAdd" to="VBox/PlayerSelect/Player3" method="_on_BtnAdd_pressed"]
[connection signal="pressed" from="VBox/PlayerSelect/Player4/Container/Icons/HBoxContainer/BtnRemove" to="VBox/PlayerSelect/Player4" method="_on_BtnRemove_pressed"]
[connection signal="pressed" from="VBox/PlayerSelect/Player4/BtnAdd" to="VBox/PlayerSelect/Player4" method="_on_BtnAdd_pressed"]
[connection signal="pressed" from="VBox/Control/BtnStart" to="." method="_on_BtnStart_pressed"]
